--- a/006 - Cleaning Up and Notifications/maintenance.html
+++ b/006 - Cleaning Up and Notifications/maintenance.html
@@ -154,7 +154,7 @@ ul
 							<o:p>&nbsp;</o:p>
 						</span>
 					</p><p class="MsoNormal">
-						<span style="font-size:11.0pt;font-family:&quot;Calibri&quot;,sans-serif;color:#1F497D">There was a problem performing automatic merges.<o:p />
+						<span style="font-size:11.0pt;font-family:&quot;Calibri&quot;,sans-serif;color:#1F497D">REPLACE_PLACE_HOLDER.<o:p />
 						</span>
 					</p><p class="MsoNormal">
 						<span style="font-size:11.0pt;font-family:&quot;Calibri&quot;,sans-serif;color:#1F497D;mso-fareast-language:EN-US">
